--- a/down.html
+++ b/down.html
@@ -7,7 +7,7 @@
 <title>判断是否是微信内置浏览器</title> 
 </head> 
 <body> 
-<h1>如果用微信浏览器打开可以看到下面的文字</h1>    
+<h1>请用浏览器打开</h1>    
 </body> 
 </html> 
 <script type="text/javascript"> 
